--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2019 Bryan Siepert, written for Adafruit Industries
+#
+# SPDX-License-Identifier: Unlicense
 python:
     version: 3
 requirements_file: requirements.txt
