Updated readthedocs requirements path

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,4 +3,4 @@
 # SPDX-License-Identifier: Unlicense
 python:
     version: 3
-requirements_file: requirements.txt
+requirements_file: docs/requirements.txt
