--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requires = [
 [project]
 name = "adafruit-circuitpython-lps35hw"
 description = "A driver for the ST LPS35HW water resistant mems pressure sensor"
-version = "0.0.0-auto.0"
+version = "0.0.0+auto.0"
 readme = "README.rst"
 authors = [
     {name = "Adafruit Industries", email = "circuitpython@adafruit.com"}
